Refactroing_11.7.2026