@@ -4,6 +4,7 @@ import io.opentelemetry.api.common.AttributeKey;
 import io.opentelemetry.api.common.Attributes;
 import io.opentelemetry.api.common.AttributesBuilder;
 import jakarta.annotation.Nonnull;
+import lombok.extern.slf4j.Slf4j;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -22,13 +23,12 @@ import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
 
 /**
- * Движок валидации платформенного semantic-контракта. Потребляет {@link CategoryContract} из
- * единого реестра {@link CategoryContracts} (тот же экземпляр, что и будущий линтер — дрейф
- * невозможен структурно).
+ * Валидация платформенного semantic-контракта. Принимает {@link CategoryContract} из
+ * единого реестра {@link CategoryContracts}.
  * <p>
- * Главный метод — {@link #validateAndNormalize}: возвращает ЕДИНЫЙ нормализованный snapshot
- * атрибутов (для имени span'а и для {@code SpanBuilder}), а не void-{@code enforce}. Вызывается
- * ДО {@code startSpan()} (sampler видит уже нормализованные creation-time атрибуты).
+ * Главный метод — {@link #validateAndNormalize}: возвращает единый нормализованный snapshot
+ * атрибутов (для имени span'а и для {@code SpanBuilder}). Вызывается до {@code startSpan()}
+ * (sampler видит уже нормализованные creation-time атрибуты).
  * <p>
  * Поведение по {@link ValidationMode}:
  * <ul>
@@ -37,11 +37,9 @@ import java.util.concurrent.ConcurrentHashMap;
  *       лог (once per rule+builder) и метрика {@code platform.tracing.semconv.violations};</li>
  *   <li>{@code DISABLED} — атрибуты as-is, без дефолтов/логов/метрик.</li>
  * </ul>
- * Класс потоко-безопасен: состояние неизменяемо, кроме набора уже залогированных ключей.
  */
+@Slf4j
 public final class AttributePolicy {
-
-    private static final Logger log = LoggerFactory.getLogger(AttributePolicy.class);
 
     /** Максимальная длина имени ключа для escape-hatch (защита от мусора). */
     private static final int MAX_KEY_LENGTH = 255;
@@ -56,7 +54,6 @@ public final class AttributePolicy {
     private final boolean allowUnsafeAttributes;
     private final SemconvMetrics metrics;
 
-    /** Лог-once guard (rate-limit без внешних зависимостей): WARN один раз на rule+builder. */
     private final Set<String> warnedOnce = ConcurrentHashMap.newKeySet();
 
     public AttributePolicy(@Nonnull ValidationMode mode,
@@ -67,7 +64,6 @@ public final class AttributePolicy {
         this.metrics = metrics;
     }
 
-    /** Удобный конструктор: WARN, unsafe запрещён, метрики no-op (для SDK-only/тестов). */
     public AttributePolicy() {
         this(ValidationMode.WARN, false, SemconvMetrics.NOOP);
     }
@@ -77,20 +73,11 @@ public final class AttributePolicy {
         return mode;
     }
 
-    /** Контракт категории из единого реестра (тот же экземпляр потребляет линтер). */
     @Nonnull
     public CategoryContract contractFor(@Nonnull SpanCategory category) {
         return CategoryContracts.of(category);
     }
 
-    /**
-     * Валидирует накопленные (типизированные) атрибуты против контракта категории и возвращает
-     * нормализованный snapshot. См. javadoc класса о режимах.
-     *
-     * @param category    категория span'а
-     * @param accumulated накопленные типизированные атрибуты (без escape-hatch unsafe-ключей)
-     * @param builderName имя builder'а/источника (тег метрики)
-     */
     @Nonnull
     public ValidatedAttributes validateAndNormalize(@Nonnull SpanCategory category,
                                                     @Nonnull Attributes accumulated,
@@ -103,36 +90,27 @@ public final class AttributePolicy {
         List<SemconvViolation> violations = collectViolations(contract, accumulated, category, builderName);
 
         if (mode == ValidationMode.STRICT && !violations.isEmpty()) {
-            throw new SemconvViolationException(violations.get(0));
+            throw new SemconvViolationException(violations.getFirst());
         }
 
-        // WARN: self-diagnostics + safe-defaults (только platform-required platform.trace.type).
         for (SemconvViolation v : violations) {
             metrics.violation(v.ruleId(), v.builder());
             warnOnce(v);
         }
+
         AttributesBuilder normalized = accumulated.toBuilder();
         applySafeDefaults(normalized, category, accumulated);
         return new ValidatedAttributes(normalized.build(), violations);
     }
 
-    /**
-     * Аудит escape-hatch ключа {@code unsafeAttribute}. Инкрементирует метрику
-     * {@code platform.tracing.unsafe_attributes{key_class}} и пишет sanitized-лог. Возвращает
-     * класс ключа; при {@link UnsafeKeyClass#REJECTED} вызывающий builder НЕ должен записывать
-     * атрибут.
-     *
-     * @param key имя ключа escape-hatch атрибута
-     */
     @Nonnull
     public UnsafeKeyClass auditUnsafeAttribute(@Nonnull String key) {
         UnsafeKeyClass kc = classify(key);
         metrics.unsafeAttribute(kc.metricValue());
         if (kc != UnsafeKeyClass.REJECTED) {
-            // В лог НЕ кладём raw key: он может быть high-cardinality / PII-подобным
-            // (например "customer.123456.email"). Маскируем.
             log.warn("unsafeAttribute key={} class={}", sanitizeKeyForLog(key), kc);
         }
+
         return kc;
     }
 
@@ -140,9 +118,11 @@ public final class AttributePolicy {
         if (!allowUnsafeAttributes) {
             return UnsafeKeyClass.REJECTED;
         }
+
         if (key == null || key.isBlank() || key.length() > MAX_KEY_LENGTH) {
             return UnsafeKeyClass.REJECTED;
         }
+
         return KNOWN_KEYS.contains(key) ? UnsafeKeyClass.KNOWN : UnsafeKeyClass.UNKNOWN;
     }
 
@@ -153,42 +133,35 @@ public final class AttributePolicy {
         List<SemconvViolation> violations = new ArrayList<>();
         Set<AttributeKey<?>> present = accumulated.asMap().keySet();
 
-        // 1. allowlist / forbidden
         for (AttributeKey<?> key : present) {
             if (contract.forbidden().contains(key)) {
                 violations.add(new SemconvViolation("ATTR_FORBIDDEN", category, builderName,
-                        key.getKey(), "запрещённый атрибут '" + key.getKey() + "' для категории " + category));
+                        key.getKey(), "forbidden attribute '" + key.getKey() + "' for category " + category));
             } else if (!contract.allowlist().contains(key)) {
                 violations.add(new SemconvViolation("ATTR_NOT_ALLOWED", category, builderName,
-                        key.getKey(), "атрибут '" + key.getKey() + "' вне allowlist категории " + category));
+                        key.getKey(), "attribute '" + key.getKey() + "' is not in the allowlist for category " + category));
             }
         }
 
-        // 2. required
         for (AttributeKey<?> req : contract.required()) {
             if (!present.contains(req)) {
                 violations.add(new SemconvViolation("REQUIRED_MISSING", category, builderName,
-                        req.getKey(), "обязательный атрибут '" + req.getKey() + "' отсутствует"));
+                        req.getKey(), "required attribute '" + req.getKey() + "' is missing"));
             }
         }
 
-        // 3. requiredAnyOf (dual-attribute)
         for (Set<AttributeKey<?>> anyOf : contract.requiredAnyOf()) {
             boolean satisfied = anyOf.stream().anyMatch(present::contains);
             if (!satisfied) {
                 String names = anyOf.stream().map(AttributeKey::getKey).sorted().toList().toString();
                 violations.add(new SemconvViolation("REQUIRED_ANY_OF_MISSING", category, builderName,
-                        null, "должен присутствовать хотя бы один из " + names));
+                        null, "at least one of " + names + " must be present"));
             }
         }
 
         return violations;
     }
 
-    /**
-     * Safe-defaults ТОЛЬКО для безопасных platform-required полей. Сейчас это
-     * {@code platform.trace.type} = значение категории (builder обычно его уже ставит сам).
-     */
     private void applySafeDefaults(AttributesBuilder normalized, SpanCategory category, Attributes accumulated) {
         if (accumulated.get(SemconvKeys.PLATFORM_TYPE) == null) {
             normalized.put(SemconvKeys.PLATFORM_TYPE, category.value());
@@ -205,18 +178,16 @@ public final class AttributePolicy {
         }
     }
 
-    /**
-     * Маскирует ключ для лога: оставляет первый сегмент пути (до точки) и длину остального,
-     * чтобы не печатать потенциально PII-подобные сегменты целиком.
-     */
     static String sanitizeKeyForLog(String key) {
         if (key == null) {
             return "<null>";
         }
+
         int dot = key.indexOf('.');
         if (dot <= 0) {
             return key.length() <= 8 ? key : key.substring(0, 8) + "…";
         }
+
         return key.substring(0, dot) + ".***(" + (key.length() - dot - 1) + " chars)";
     }
 
@@ -227,10 +198,10 @@ public final class AttributePolicy {
                 keys.add(key.getKey());
             }
         }
+
         return Set.copyOf(keys);
     }
 
-    /** Класс escape-hatch ключа для метрики/аудита. */
     public enum UnsafeKeyClass {
         /** Ключ известен платформе (в allowlist какой-либо категории / SemconvKeys). */
         KNOWN("known"),
